# music-metadata-wasm

./: .gitignore  Cargo.toml  README.md  build.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vite.config.ts
lib/: index.ts
playground/: index.html  index.ts  vite.config.ts
samples/: flac.flac  ogg.opus
src/: lib.rs  picture.rs  tag.rs
