[package]
name = "music_metadata"
version = "0.0.1"
edition = "2021"
authors = [ "subframe7536" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib" ]

[dependencies]
lofty = "0.22"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
strip = true
